commented all functions properly. refactored eventChain. bugfix wrongMove too close to timeout

--- a/assets/style/sass/main.scss
+++ b/assets/style/sass/main.scss
@@ -30,183 +30,6 @@ $debugMode: 1;
 
 
 
-    section.intro {
-        .logo {
-            width: 80%;
-            height: 0;
-            padding-bottom: 20%;
-            $sw: 'stroke="white" fill="none"';
-            $sb: 'stroke="black" fill="none"';
-
-            $svg: (
-                '<g #{$sb} stroke-width="54">'
-                    '<path d="M120,157 h-83 v-144" />'
-                    '<circle cx="218" cy="99" r="66" />'
-                    '<circle cx="409" cy="99" r="66" />'
-                    '<path d="M542,186 v-147 h31 a30,30 0 1 1 0,60 h-31" />'
-                    '<path d="M791,157 h-116 v-4 l89,-113 v-1 h-115" />'
-                '</g>'
-                '<g #{$sw} stroke-width="46">'
-                    '<path d="M114,155 h-80 v-140" />'
-                    '<circle cx="216" cy="98" r="66" />'
-                    '<circle cx="407" cy="98" r="66" />'
-                    '<path d="M540,181 v-144 h31 a30,30 0 1 1 0,60 h-31" />'
-                    '<path d="M784,155 h-111 v-3 l88,-112 v-3 h-111" />'
-                '</g>'
-                '<g #{$sb} stroke-width="33">'
-                    '<path d="M110,157 h-73 v-135" />'
-                    '<circle cx="218" cy="99" r="66" />'
-                    '<circle cx="409" cy="99" r="66" />'
-                    '<path d="M542,176 v-137 h31 a30,30 0 1 1 0,60 h-31" />'
-                    '<path d="M782,157 h-107 v-4 l89,-113 v-1 h-106" />'                
-                '</g>'
-                '<g #{$sw} stroke-width="26">'
-                    '<path d="M105,155 h-70 v-131" />'
-                    '<circle cx="216" cy="98" r="66" />'
-                    '<circle cx="407" cy="98" r="66" />'
-                    '<path d="M540,171 v-134 h31 a30,30 0 1 1 0,60 h-31" />'
-                    '<path d="M775,155 h-102 v-3 l88,-112 v-3 h-102" />'
-                '</g>'
-                '<g #{$sb} stroke-width="14">'
-                    '<path d="M101,157 h-63 v-125" />'
-                    '<circle cx="218" cy="99" r="66" />'
-                    '<circle cx="409" cy="99" r="66" />'
-                    '<path d="M542,166 v-127 h31 a30,30 0 1 1 0,60 h-31" />'
-                    '<path d="M773,157 h-98 v-4 l89,-113 v-1 h-97" />'
-                '</g>'
-                '<g #{$sw} stroke-width="8">'
-                    '<path d="M96,155 h-60 v-122" />'
-                    '<circle cx="216" cy="98" r="66" />'
-                    '<circle cx="407" cy="98" r="66" />'
-                    '<path d="M540,161 v-124 h31 a30,30 0 1 1 0,60 h-31" />'
-                    '<path d="M766,155 h-93 v-3 l88,-112 v-3 h-93" />'            
-                '</g>'
-            );
-            @include svg($svg, 0, 0, 800, 200);
-            margin: 0 auto;
-        }
-        li {
-            // TODO remove font size
-            font-size: 20px;
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            box-sizing: border-box;
-            padding-top: 22%;
-
-            opacity: 0;
-            &:nth-child(1) {
-                animation: intro 24s linear infinite;
-            }
-            &:nth-child(2) {
-                animation: intro 24s 8s linear infinite;
-            }
-            &:nth-child(3) {
-                animation: intro 24s 16s linear infinite;
-            }
-            &:nth-child(4) {
-                opacity: 1;
-            }
-        }
-        @keyframes intro {
-            from, to { opacity: 0; }
-            2%, 31% { opacity: 1; }
-            33% { opacity: 0; }
-        }
-
-        .charset span {
-            display: inline-block;
-            vertical-align: top;
-
-            background-image: url('assets/images/chars576x30.png');
-            background-repeat: no-repeat;
-            background-position: left center;
-            background-size: auto 100%;
-            // the power of the pixels <3
-            image-rendering: pixelated;
-
-            // width + height is the same for all chars
-            // and maintained by js
-
-            &.a   { @include setCharPos(0); }
-            &.b   { @include setCharPos(16); }
-            &.c   { @include setCharPos(32); }
-            &.d   { @include setCharPos(48); }
-            &.e   { @include setCharPos(64); }
-            &.f   { @include setCharPos(80); }
-            &.g   { @include setCharPos(96); }
-            &.h   { @include setCharPos(112); }
-            &.i   { @include setCharPos(128); }
-            &.j   { @include setCharPos(144); }
-            &.k   { @include setCharPos(160); }
-            &.l   { @include setCharPos(176); }
-            &.m   { @include setCharPos(192); }
-            &.n   { @include setCharPos(208); }
-            &.o   { @include setCharPos(224); }
-            &.p   { @include setCharPos(240); }
-            &.q   { @include setCharPos(256); }
-            &.r   { @include setCharPos(272); }
-            &.s   { @include setCharPos(288); }
-            &.t   { @include setCharPos(304); }
-            &.u   { @include setCharPos(320); }
-            &.v   { @include setCharPos(336); }
-            &.w   { @include setCharPos(352); }
-            &.x   { @include setCharPos(368); }
-            &.y   { @include setCharPos(384); }
-            &.z   { @include setCharPos(400); }
-            &.n0  { @include setCharPos(416); }
-            &.n1  { @include setCharPos(432); }
-            &.n2  { @include setCharPos(448); }
-            &.n3  { @include setCharPos(464); }
-            &.n4  { @include setCharPos(480); }
-            &.n5  { @include setCharPos(496); }
-            &.n6  { @include setCharPos(512); }
-            &.n7  { @include setCharPos(528); }
-            &.n8  { @include setCharPos(544); }
-            &.n9  { @include setCharPos(560); }
-            &.spc { background-image: none; }
-        }
-
-        p {
-            text-align: center;
-            &.left {
-                text-align: left;
-            }
-            &.right {
-                text-align: right;
-            }
-            color: green;
-        }
-        .tab {
-            position: relative;
-            .right {
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 100%;
-                height: auto;
-            }
-        }
-        // start buttons
-        button.start {
-            padding: 10px 20px;
-            border: none;
-            &.e {
-                background-color: #003300; 
-            }
-            &.m {
-                background-color: #333300; 
-            }
-            &.h {
-                background-color: #330000; 
-            }
-            span {
-                pointer-events: none;
-            }
-        }
-    }
 
     .ztest {
         display: none;
